apps/monitoring/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: traefik
  hostnames:
    - grafana.k8s.hyperion.internal
    - grafana.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: kps-grafana
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: main
      namespace: traefik
      sectionName: https
  hostnames:
    - prometheus.k8s.hyperion.internal
  rules:
    - backendRefs:
        - name: kps-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: main
      namespace: traefik
      sectionName: https
  hostnames:
    - alertmanager.k8s.hyperion.internal
  rules:
    - backendRefs:
        - name: kps-alertmanager
          port: 9093
